--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,16 +5,15 @@ services:
         build: .
         depends_on:
             - postgis
-        #command: bash -c "./manage.py wait_for_db 2> /dev/null &&
-        command: bash -c "
+        command: bash -c "./manage.py wait_for_db 2> /dev/null &&
                           ./manage.py makemigrations &&
                           ./manage.py migrate &&
                           ./manage.py runserver 0.0.0.0:8000"
         environment:
             - SECRET_KEY=${SECRET_KEY}
-            - POSTGRES_NAME=geodjango
-            - POSTGRES_USER=geo
-            - POSTGRES_PASSWORD=geo
+            - POSTGRES_NAME=resources
+            - POSTGRES_USER=resources
+            - POSTGRES_PASSWORD=Pa55w0rD
             - POSTGRES_HOST=postgis
             - POSTGRES_PORT=5432
         ports:
@@ -27,9 +26,9 @@ services:
     postgis:
         image: kartoza/postgis:latest
         environment:
-            - POSTGRES_DBNAME=geodjango
-            - POSTGRES_USER=geo
-            - POSTGRES_PASS=geo
+            - POSTGRES_DBNAME=resources
+            - POSTGRES_USER=resources
+            - POSTGRES_PASS=Pa55w0rD
             - ALLOW_IP_RANGE=0.0.0.0/0
             #- PGDATA=/var/lib/postgresql/data
         volumes:
