--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,4 @@ djangorestframework==3.11.0
 djangorestframework-csv==2.1.0
 geocoder==1.38.1
 Markdown==3.2.1
-psycopg2==2.8.4
+psycopg2-binary==2.8.4
