--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ django-cors-headers==3.2.1
 django-filter==2.2.0
 djangorestframework==3.11.0
 djangorestframework-csv==2.1.0
+djangorestframework-gis==0.15
 geocoder==1.38.1
 Markdown==3.2.1
 psycopg2-binary==2.8.4
